################################################################################
#                             nxTools - Change Log                             #
################################################################################

nxTools v1.0.5a (Sep 12, 2006):
  FIX: Small typo in the common library that broke many things.

nxTools v1.0.5 (Sep 5, 2006):
  NEW: Aliases for SITE EDITPRE sub-commands ("section" and "group").
  NEW: Section cookie for latest race and pre symlinks.
  CHG: Improved path resolving and symlink removal functions.
  CHG: Improved performance of directory listing routines.
  CHG: Output from "SITE CLEAN" and "SITE REBUILD" is no longer buffered to
       prevent ioFTPD from stopping the script because of execution time limits.
  CHG: Updated SQLite to v3.3.7.
  FIX: Always make the pre area upper-case.
  FIX: Directory dupe database was always cleaned, even if disabled in the config.
  FIX: Log the maximum request age as a time duration.
  FIX: Many directories and files were skipped when rebuilding the dupe database.
  FIX: The "SITE EDITPRE ADDAREA" command requires the "other" variable to be set.

nxTools v1.0.4a (May 7, 2006):
  FIX: Typo in v1.0.4 that broke file dupe checking.

nxTools v1.0.4 (May 6, 2006):
  NEW: Check if the request was already filled before adding it.
  NEW: Extensions are now loaded using Tcl's package system.
  FIX: Properly quote string values in SQL statements.
  FIX: The "SITE PRE STATS" command was broken in v1.0.3.
  FIX: The maximum request age should be logged in seconds.
  FIX: The release check for "SITE REQUEST" did not allow some valid names.

nxTools v1.0.3 (Apr 5, 2006):
  NEW: Display pre areas on multiple lines if necessary (word wrapping).
  NEW: SITE SEARCH, same as SITE DUPE but with simpler output.
  CHG: Updated nxHelper to v2.3.0, new global-interp key functions.
  FIX: Possible crashes using "SITE OPEN/CLOSE" due to ioFTPD's buggy
       global-interp "var get/set" command.