@@ -292,16 +292,23 @@ set dupe(RebuildIgnore) {
 
 #### Force Settings ########################################
 #
-# - Force the NFO, SFV, and Sample files first.
-# - Paths to force NFO and SFV files first (case sensitive).
 # - Paths to exempt from force checks (case insensitive).
+#
+set force(Exempts)      {*/codec */cover */covers */extra */sample */subs */extras */vobsub */vobsubs}
+#
+# - Force NFO or SFV files first.
+# - Paths to force files on (case sensitive).
 #
 set force(NfoFirst)     True
 set force(SfvFirst)     True
-set force(SampleFirst)  True
 set force(FilePaths)    {/APPS/* /DIVX/* /DVDR/* /GAMES/* /MP3/* /SVCD/* /TVRIPS/* /VCD/* /XVID/* /XXX/*}
+#
+# - Force sample files first.
+# - Paths to force samples on (case sensitive).
+#
+set force(SampleFirst)  True
+set force(SampleExts)   {*.avi *.jpg *.jpeg *.mpeg *.mpg *.png *.vob}
 set force(SamplePaths)  {/DIVX/* /DVDR/* /SVCD/* /TVRIPS/* /VCD/* /XVID/* /XXX/*}
-set force(Exempts)      {*/codec */cover */covers */extra */sample */subs */extras */vobsub */vobsubs}
 
 #### Latest Links ##########################################
 #
